Fixed the Internet Explorer z-index problem

--- a/styles.css
+++ b/styles.css
@@ -687,7 +687,7 @@ div .bibResourceSidebar { display:none; }
     clear:both;
     float:right;
     width:100%;
-    z-index:998;
+    z-index:1;
 }
 
 .linkBanner a {color: #FFFFFF; font-weight:bold; text-decoration:none;}
@@ -1051,7 +1051,7 @@ div.rssChannelEntries { border:none; background:#FFFFFF; }
 
 .topLinks a { float:right; }
 
-.topLogo { position:relative; }
+.topLogo { position:relative; z-index:3}
 
 .topLogo img { border:0; display:block; margin-left:auto; margin-right:auto }
 
